--- a/day0/L/conf.yaml
+++ b/day0/L/conf.yaml
@@ -9,13 +9,13 @@ compile:
 data: []
 folder: problem
 memory limit: 512 MiB
-name: L
+name: cube
 partial score: false
 pre: []
 samples: []
 time limit: 1.0
 title:
-  zh-cn: 用于试题标题的中文名称
+  zh-cn: 数正方体
 type: program
 users: {}
 version: 2
