--- a/day0/L/conf.yaml
+++ b/day0/L/conf.yaml
@@ -6,16 +6,20 @@ compile:
   java: ''
   pas: -O2
   py: ''
-data: []
+data: 
+  - cases: [1,2,3,4,5,6,7,8,9,10,11,12]
+    score: 100
 folder: problem
 memory limit: 512 MiB
 name: cube
 partial score: false
-pre: []
-samples: []
+samples:
+  - cases: [1]
 time limit: 1.0
 title:
   zh-cn: 数正方体
 type: program
-users: {}
+users:
+  esc:
+    std: {expected: == 100, path: esc/std.cpp}
 version: 2
