--- a/day0/J/conf.yaml
+++ b/day0/J/conf.yaml
@@ -9,13 +9,13 @@ compile:
 data: []
 folder: problem
 memory limit: 512 MiB
-name: J
+name: teamwork
 partial score: false
 pre: []
 samples: []
 time limit: 1.0
 title:
-  zh-cn: 用于试题标题的中文名称
+  zh-cn: J. 分组作业
 type: program
 users: {}
 version: 2
