--- a/day0/J/conf.yaml
+++ b/day0/J/conf.yaml
@@ -6,13 +6,16 @@ compile:
   java: ''
   pas: -O2
   py: ''
-data: []
+data:
+  - cases: [1,2,3,4,5,6,7]
+    score: 100
 folder: problem
 memory limit: 512 MiB
 name: teamwork
 partial score: false
 pre: []
-samples: []
+samples: 
+  - cases: [8]
 time limit: 1.0
 title:
   zh-cn: J. 分组作业
