--- a/day0/L/conf.yaml
+++ b/day0/L/conf.yaml
@@ -22,4 +22,6 @@ type: program
 users:
   esc:
     std: {expected: == 100, path: esc/std.cpp}
+  zyb:
+    std: {expected: == 100, path: zyb/l.cpp}
 version: 2
