--- a/day0/K/conf.yaml
+++ b/day0/K/conf.yaml
@@ -23,4 +23,6 @@ type: program
 users:
   zyb:
     std: {expected: == 100, path: zyb/k.cpp}
+  djh:
+    std: {expected: == 100, path: djh/k.cpp}
 version: 2
