--- a/day0/H/conf.yaml
+++ b/day0/H/conf.yaml
@@ -9,13 +9,13 @@ compile:
 data: []
 folder: problem
 memory limit: 512 MiB
-name: I
+name: H
 partial score: false
 pre: []
 samples: []
-time limit: 1.0
+time limit: 2.5
 title:
-  zh-cn: tdnmo
+  zh-cn: 赫露艾斯塔
 type: program
 users: {}
 version: 2
